# ideation-agent-hypothesis-architect

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: run.yml
src/ideation_agent_hypothesis_architect/: __init__.py  agent.py  main.py
src/ideation_agent_hypothesis_architect/prompts/: system.md
tests/: test_agent.py
